fixes: the website would be wider than 100% on mobile view due to the sidebar

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -444,7 +444,7 @@ p {
     opacity: 0;
     transition: translate var(--animation-timing), opacity var(--animation-timing);
     min-height: 100vh;
-    width: 100%;
+    width: 95%;
     z-index: 999;
     overscroll-behavior: contain;
     overflow: hidden;
